5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4344/executions/1601_820.log
== TEST (2019-03-31 22:09:47) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R$50
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:12:35) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
valor = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 8
    valor = notas_R$50
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:15:21) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
valor = notas_50

# Valor restante a ser sacado com notas menores que R$ 50
resto = valor % 50

# Quantidade de notas de R$ 10
notas   = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 14
    notas   = resto_R$50 // 10
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:15:58) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
valor = notas_50

# Valor restante a ser sacado com notas menores que R$ 50
resto = valor % 50

# Quantidade de notas de R$ 10
notas   = resto_50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto = resto_50 % 10

# Quantidade de notas de R$ 2
notas = resto_10 // 2

print(int(notas_50))
print(int(notas_10))
print(int(notas_2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    valor = notas_50
NameError: name 'notas_50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:16:46) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
valor = notas//50

# Valor restante a ser sacado com notas menores que R$ 50
resto = valor % 50

# Quantidade de notas de R$ 10
notas   = resto_50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto = resto_50 % 10

# Quantidade de notas de R$ 2
notas = resto_10 // 2

print(int(notas_50))
print(int(notas_10))
print(int(notas_2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    valor = notas//50
NameError: name 'notas' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:18:07) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
valor = notas//50

# Valor restante a ser sacado com notas menores que R$ 50
resto = valor % 50

# Quantidade de notas de R$ 10
notas   = resto_50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto = resto_50 % 10

# Quantidade de notas de R$ 2
notas = resto_10 // 2

print(int(notas_50))
print(int(notas_10))
print(int(notas_2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    valor = notas//50
NameError: name 'notas' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:18:56) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
valor = notas//50

# Valor restante a ser sacado com notas menores que R$ 50
resto = valor % 50

# Quantidade de notas de R$ 10
notas   = resto // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto = resto % 10

# Quantidade de notas de R$ 2
notas = resto // 2

print(int(notas_50))
print(int(notas_10))
print(int(notas_2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    valor = notas//50
NameError: name 'notas' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:06:19) 
-- CODE:
#ade de notas de R$ 50
#valor = notas//50

# Valo# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? "))
print(VALOR//2)



# Quantid
-- OUTPUT:
1014
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:06:47) 
-- CODE:
#ade de notas de R$ 50
#valor = notas//50

# Valo# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? "))
print(VALOR%2)



# Quantid
-- OUTPUT:
1014
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:10:24) 
-- CODE:
#ade de notas de R$ 50
#valor = notas//50

# Valo# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? "))
if VALOR>0 && VALOR%2==0:
	nota50 = VALOR//50
	nota10 = VALOR//10
	nota2  = VALOR//2
	print(nota50)
	print(nota10)
	print(nota2)
	



# Quantid
-- ERROR:
File "XXXX", line 9
    if VALOR>0 && VALOR%2==0:
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:11:31) 
-- CODE:
#ade de notas de R$ 50
#valor = notas//50

# Valo# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? "))
if VALOR>0 and VALOR%2==0:
	nota50 = VALOR//50
	nota10 = VALOR//10
	nota2  = VALOR//2
	print(nota50)
	print(nota10)
	print(nota2)
	



# Quantid
-- OUTPUT:
40
202
1014
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:11:59) 
-- CODE:
#ade de notas de R$ 50
#valor = notas//50

# Valo# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? "))
if VALOR>0 and VALOR%2==0:
	nota50 = VALOR//50
	nota10 = nota50//10
	nota2  = nota10//2
	print(nota50)
	print(nota10)
	print(nota2)
	



# Quantid
-- OUTPUT:
40
4
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:13:53) 
-- CODE:
#ade de notas de R$ 50
#valor = notas//50

# Valo# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? "))
if VALOR>0 and VALOR%2==0:
	nota50 = VALOR//50
	nota10 = (VALOR - nota50*50)//10
	nota2  = (VALOR - nota10*10)//2
	print(nota50)
	print(nota10)
	print(nota2)
	



# Quantid
-- OUTPUT:
40
2
1004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:15:12) 
-- CODE:
#ade de notas de R$ 50
#valor = notas//50

# Valo# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? "))
if VALOR>0 and VALOR%2==0:
	nota50 = VALOR//50
	nota10 = (VALOR - nota50*50)//10
	nota2  = (nota50*50 - nota10*10)//2
	print(nota50)
	print(nota10)
	print(nota2)
	



# Quantid
-- OUTPUT:
40
2
990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:15:47) 
-- CODE:
#ade de notas de R$ 50
#valor = notas//50

# Valo# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? "))
if VALOR>0 and VALOR%2==0:
	nota50 = VALOR//50
	nota10 = (VALOR - nota50*50)//10
	nota2  = (nota10*10)//2
	print(nota50)
	print(nota10)
	print(nota2)
	



# Quantid
-- OUTPUT:
40
2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:16:03) 
-- CODE:
#ade de notas de R$ 50
#valor = notas//50

# Valo# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? "))
if VALOR>0 and VALOR%2==0:
	nota50 = VALOR//50
	nota10 = (VALOR - nota50*50)//10
	nota2  = nota10//2
	print(nota50)
	print(nota10)
	print(nota2)
	



# Quantid
-- OUTPUT:
40
2
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:24:45) 
-- CODE:
#ade de notas de R$ 50
#valor = notas//50

# Valo# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016


VALOR = int(input("Qual o valor do saque? "))
if VALOR>0 and VALOR%2==0:
	nota50 = VALOR//50
	aux1 = nota50*50
	nota10 = (VALOR - aux1)//10
	aux2 = nota10*10
	nota2  = (VALOR-aux1-aux2)//2
	print(nota50)
	print(nota10)
	print(nota2)


# Quantid
-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:25:04) 
-- CODE:
#ade de notas de R$ 50
#valor = notas//50

# Valo# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016


VALOR = int(input("Qual o valor do saque? "))
if VALOR>0 and VALOR%2==0:
	nota50 = VALOR//50
	aux1 = nota50*50
	nota10 = (VALOR - aux1)//10
	aux2 = nota10*10
	nota2  = (VALOR-aux1-aux2)//2
	print(nota50)
	print(nota10)
	print(nota2)


# Quantid
-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:25:39) 
-- CODE:
#ade de notas de R$ 50
#valor = notas//50

# Valo# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016


VALOR = int(input("Qual o valor do saque? "))
if VALOR>0 and VALOR%2==0:
	nota50 = VALOR//50
	aux1 = nota50*50
	nota10 = (VALOR - aux1)//10
	aux2 = nota10*10
	nota2  = (VALOR-aux1-aux2)//2
	print(nota50)
	print(nota10)
	print(nota2)


# Quantid
-- EXECUTION TIME:
0.145001
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
